--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>JQUERY LITE</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./lib/jquery_lite.js"></script>
+    <script src="./lib/bundle.js"></script>
   </head>
   <body>
     <div class="puppy">
