--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>JQUERY LITE</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./lib/bundle.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+    <script src="bundle.js" charset="utf-8" type="text/javascript"></script>
   </head>
   <body>
     <div class="puppy">
