--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JQUERY LITE</title>
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-    <script src="bundle.js" charset="utf-8" type="text/javascript"></script>
+    <script src="./lib/bundle.js" charset="utf-8" type="text/javascript"></script>
   </head>
   <body>
     <div class="puppy">
